edited some designs

--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
       </section>
     </header>
     <!-- main section -->
-    <main class="w-11/12 mx-auto py-10 grid md:grid-cols-12 gap-5 border-2">
-      <section
-        class="cards col-span-9 border-2 grid grid-cols-1 md:grid-cols-3 gap-5"
-      >
+    <main class="w-11/12 mx-auto py-10 grid md:grid-cols-12 gap-5">
+      <section class="cards col-span-9 grid grid-cols-1 md:grid-cols-3 gap-5">
         <!-- card1 -->
         <div
           class="card bg-white p-4 py-4 rounded-xl shadow-[0px_2px_3px_0px_rgba(0,0,0,0.15)]"
@@ -424,25 +422,18 @@
         </div>
       </section>
       <!-- aside -->
-      <aside class="side col-span-9 md:col-span-3 border-2 rounded-xl">
-        <div
-          class="border-1 rounded-xl bg-white flex md:flex-col flex-row justify-between items-center"
-        >
+      <aside class="side col-span-9 md:col-span-3 rounded-xl bg-white p-4">
+        <div class="rounded-xl flex justify-between items-center">
           <p class="text-xl font-semibold">
             <i class="fa-solid fa-clock"></i> Call History
           </p>
           <button
-            class="bg-[#00A63E] px-9 py-3 rounded-[50px] text-white font-semibold text-[16px]"
+            class="bg-[#00A63E] px-9 py-3 rounded-[50px] text-white font-semibold text-[16px] ml-1"
           >
             Clear
           </button>
         </div>
-        <div
-          id="history-contianer"
-          class="bg-green-500 mt-4 border-1 rounded-xl"
-        >
-          dfgfhgfs
-        </div>
+        <div id="history-contianer" class="bg-[#fafafa] mt-4 rounded-xl p-4">walton</div>
       </aside>
       <script src="./script.js"></script>
     </main>
