added cursor pointer on buttons

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         class="text-white bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-6"
       >
         <img src="./assets/logo-dark.png" alt="Logo" class="w-[92px] mx-auto" />
-        <h1 class="text-[40px] font-bold my-3">Emergency Service Directory</h1>
+        <h1 class="md:text-[40px] text-[35px] font-bold my-3">
+          Emergency Service Directory
+        </h1>
         <p class="text-[20px] font-semibold">
           Government Emergency Services at Your Fingertip – A Project by
           Government of the People’s Republic of Bangladesh
@@ -93,7 +95,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">National Emergency Number</h1>
@@ -105,12 +107,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -123,7 +125,7 @@
           <!-- img part -->
           <div class="flex justify-between items-center mb-2">
             <div
-              class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-[16px] flex items-center justify-center"
+              class="w-[60px] h-[60px] bg-[#dfefff] rounded-[16px] flex items-center justify-center"
             >
               <img
                 src="./assets/police.png"
@@ -131,7 +133,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Police Helpline number</h1>
@@ -143,12 +145,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -169,7 +171,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Fire Service Number</h1>
@@ -181,12 +183,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -207,7 +209,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Ambulance Service</h1>
@@ -219,12 +221,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -245,7 +247,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Women & Child Helpline</h1>
@@ -257,12 +259,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -283,7 +285,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Anti-Corruption Helpline</h1>
@@ -295,12 +297,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -321,7 +323,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Electricity Helpline</h1>
@@ -333,12 +335,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -359,7 +361,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Brac Helpline</h1>
@@ -371,12 +373,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -397,7 +399,7 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl"></i>
+            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Bangladesh Railway Helpline</h1>
@@ -409,12 +411,12 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
-              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%]"
+              class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -422,18 +424,21 @@
         </div>
       </section>
       <!-- aside -->
-      <aside class="side col-span-9 md:col-span-3 rounded-xl bg-white p-4">
+      <aside class="col-span-9 md:col-span-3 rounded-xl bg-white p-4">
         <div class="rounded-xl flex justify-between items-center">
           <p class="text-xl font-semibold">
             <i class="fa-solid fa-clock"></i> Call History
           </p>
           <button
-            class="bg-[#00A63E] px-9 py-3 rounded-[50px] text-white font-semibold text-[16px] ml-1"
+            class="bg-[#00A63E] px-9 py-3 rounded-[50px] text-white font-semibold text-[16px] ml-1 cursor-pointer"
           >
             Clear
           </button>
         </div>
-        <div id="history-contianer" class="bg-[#fafafa] mt-4 rounded-xl p-4">walton</div>
+        <div
+          id="history-contianer"
+          class="bg-[#fafafa] mt-4 rounded-xl p-4"
+        ></div>
       </aside>
       <script src="./script.js"></script>
     </main>
