--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <!-- navbar -->
       <nav
-        class="bg-white flex flex-col md:flex-row justify-between items-center mx-auto py-3 px-15"
+        class="bg-white flex flex-col md:flex-row justify-between items-center mx-auto py-4 px-15 gap-6"
       >
         <!--left-div-->
         <div class="left-div flex items-center gap-1">
@@ -43,35 +43,37 @@
         <div class="flex gap-4">
           <!-- heart -->
           <div
-            class="flex gap-1 w-[120px] justify-center py-3 bg-[#41ff6b1a] rounded-[50px]"
+            class="flex gap-1 w-[100px] justify-center py-3 bg-[#41ff6b1a] rounded-[50px]"
           >
-            <span class="font-bold">0</span>
+            <span id="heart-counter" class="font-bold">0</span>
             <img src="./assets/heart.png" alt="" class="w-[30px] h-[30px]" />
           </div>
           <!-- coin -->
           <div
-            class="flex gap-1 w-[120px] justify-center py-3 bg-[#41ff6b1a] rounded-[50px]"
+            class="flex gap-1 w-[100px] justify-center py-3 bg-[#41ff6b1a] rounded-[50px]"
           >
             <span class="font-bold">100</span>
             <img src="./assets/coin.png" alt="" class="w-[30px]" />
           </div>
           <!-- copy -->
           <div
-            class="flex gap-1 w-[130px] justify-center py-3 bg-[#00a63e] rounded-[50px]"
+            class="flex gap-1 w-[100px] justify-center py-3 bg-[#00a63e] rounded-[50px]"
           >
-            <p class="font-bold text-white"><span>2</span> Copy</p>
+            <p class="font-bold text-white">
+              <span id="copy-counter">0</span> Copy
+            </p>
           </div>
         </div>
       </nav>
       <!-- Hero section -->
       <section
-        class="text-white bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-6"
+        class="text-white bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-5"
       >
         <img src="./assets/logo-dark.png" alt="Logo" class="w-[92px] mx-auto" />
-        <h1 class="md:text-[40px] text-[35px] font-bold my-3">
+        <h1 class="md:text-[40px] text-[30px] font-bold my-3">
           Emergency Service Directory
         </h1>
-        <p class="text-[20px] font-semibold">
+        <p class="md:text-[20px] font-semibold">
           Government Emergency Services at Your Fingertip – A Project by
           Government of the People’s Republic of Bangladesh
         </p>
@@ -95,7 +97,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">National Emergency Number</h1>
@@ -109,7 +113,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -133,7 +137,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Police Helpline number</h1>
@@ -147,7 +153,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -171,7 +177,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Fire Service Number</h1>
@@ -185,7 +193,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -209,7 +217,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Ambulance Service</h1>
@@ -223,7 +233,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -247,7 +257,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Women & Child Helpline</h1>
@@ -261,7 +273,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -285,7 +297,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Anti-Corruption Helpline</h1>
@@ -299,7 +313,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -323,7 +337,9 @@
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Electricity Helpline</h1>
@@ -337,7 +353,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -356,12 +372,14 @@
               class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-[16px] flex items-center justify-center"
             >
               <img
-                src="./assets/emergency.png"
+                src="./assets/brac.png"
                 alt="emergency"
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Brac Helpline</h1>
@@ -375,7 +393,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -394,12 +412,14 @@
               class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-[16px] flex items-center justify-center"
             >
               <img
-                src="./assets/emergency.png"
+                src="./assets/Bangladesh-Railway.png"
                 alt="emergency"
                 class="w-[32px] mx-auto"
               />
             </div>
-            <i class="fa-regular fa-heart text-2xl cursor-pointer"></i>
+            <i
+              class="heart-btn heart-btn fa-regular fa-heart text-2xl cursor-pointer"
+            ></i>
           </div>
           <!-- texts part -->
           <h1 class="font-bold text-lg">Bangladesh Railway Helpline</h1>
@@ -413,7 +433,7 @@
             <button
               class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="fa-regular fa-copy"></i>Copy
+              <i class="copy-btn fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -430,7 +450,7 @@
             <i class="fa-solid fa-clock"></i> Call History
           </p>
           <button
-            class="bg-[#00A63E] px-9 py-3 rounded-[50px] text-white font-semibold text-[16px] ml-1 cursor-pointer"
+            class="bg-[#00A63E] px-7 py-3 rounded-[50px] text-white font-semibold text-[16px] ml-1 cursor-pointer"
           >
             Clear
           </button>
