added copy buttons functionality

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -151,9 +151,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -191,9 +191,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -231,9 +231,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -271,9 +271,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -311,9 +311,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -351,9 +351,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -391,9 +391,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
@@ -431,9 +431,9 @@
           <!-- button part -->
           <div class="mt-6 flex justify-between gap-3 w-full">
             <button
-              class="border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
+              class="copy-btn border-1 text-gray-500 border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
             >
-              <i class="copy-btn fa-regular fa-copy"></i>Copy
+              <i class="fa-regular fa-copy"></i>Copy
             </button>
             <button
               class="border-1 text-white bg-[#00a63e] border-gray-400 px-8 py-2 font-semibold rounded-lg flex items-center gap-2 shadow-sm w-[50%] cursor-pointer"
